# ApplyCopilot

./: .gitignore  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  setup.bat  setup.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
ai/: classifier.py  client.py  embedder.py  prompts.py  scorer.py
cli/: main.py
cli/commands/: followups.py  init.py  jobs.py  resume.py  skills.py  sync.py
config/: .env.example  settings.py
core/email/: base.py  imap_adapter.py  parser.py  sync.py
core/resume/: ats_scorer.py  builder.py  docx_writer.py  tailorer.py
core/skills/: inferrer.py  project_scanner.py
core/tracker/: application.py  followup.py
db/: models.py  session.py
db/migrations/: env.py
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/applycopilot/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: api_client.dart  router.dart  theme.dart
mobile/lib/features/applications/providers/: applications_provider.dart
mobile/lib/features/applications/screens/: application_detail_screen.dart  applications_screen.dart
mobile/lib/features/auth/providers/: auth_provider.dart
mobile/lib/features/auth/screens/: login_screen.dart
mobile/lib/features/dashboard/providers/: dashboard_provider.dart
mobile/lib/features/dashboard/screens/: dashboard_screen.dart
mobile/lib/features/profile/providers/: profile_provider.dart
mobile/lib/features/profile/screens/: profile_screen.dart
mobile/lib/features/resume/screens/: resume_screen.dart
mobile/lib/features/settings/screens/: settings_screen.dart
mobile/lib/features/skills/providers/: skills_provider.dart
mobile/lib/features/skills/screens/: skills_screen.dart
mobile/lib/l10n/: app_localizations.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
tests/: conftest.py
tests/unit/: test_email.py  test_models.py  test_resume.py  test_skills.py  test_tracker.py
